--- a/cpts_1082_bqn/index.html
+++ b/cpts_1082_bqn/index.html
@@ -33,8 +33,7 @@
     
     <link href="icomoon/style.css" rel="stylesheet">
     <!--[if lte IE 7]>
-    <script src="css/icomoon-font/lte-ie7.js">
-    </script>
+    <script src="css/icomoon-font/lte-ie7.js"></script>
     <![endif]-->
   <link href="css/wysiwyg/bootstrap-wysihtml5.css" rel="stylesheet">
   <link href="css/wysiwyg/wysiwyg-color.css" rel="stylesheet">
@@ -44,7 +43,7 @@
   <body>
     <header>
       <a href="#" class="logo">
-        <img src="img/logo.png" alt="logo" />
+        <img src="img/logo0.png" alt="logo" />
       </a>
       <div class="btn-group">
         <button class="btn btn-primary">
